Add support of cassandra 4.0.5 and jdk15